--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "helmet": "^7.1.0",
     "dotenv": "^16.3.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "cloudinary": "^2.8.0",
+    "multer": "^2.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
